--- a/Dxkotlin/app/src/main/AndroidManifest.xml
+++ b/Dxkotlin/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Dxkotlin"
         tools:targetApi="31">
         <activity
+            android:name=".DadosCadastrais"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroEmpresa"
+            android:exported="false" />
+        <activity
             android:name=".CadastroUsuario"
             android:exported="false" />
         <activity
