--- a/Dxkotlin/app/src/main/AndroidManifest.xml
+++ b/Dxkotlin/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,9 +14,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Dxkotlin"
         tools:targetApi="31">
-        <activity
-            android:name=".Tela2"
-            android:exported="false" />
         <activity
             android:name=".DadosCadastrais"
             android:exported="false" />
