--- a/Dxkotlin/app/src/main/AndroidManifest.xml
+++ b/Dxkotlin/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,8 +13,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/FullscreenTheme"
+        android:usesCleartextTraffic="true"
         android:windowSoftInputMode="adjustPan"
         tools:targetApi="31">
+        <activity
+            android:name=".CardVaga"
+            android:exported="false" />
         <activity
             android:name=".Components.LoadingDialog"
             android:exported="false" />
