--- a/Dxkotlin/app/src/main/AndroidManifest.xml
+++ b/Dxkotlin/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:usesCleartextTraffic="true"
         android:windowSoftInputMode="adjustPan"
         tools:targetApi="31">
-        <activity
-            android:name=".CardVaga"
-            android:exported="false" />
+
         <activity
             android:name=".Components.LoadingDialog"
             android:exported="false" />
@@ -27,7 +25,13 @@
             android:exported="false" />
         <activity
             android:name=".DadosCadastrais"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".CadastroEmpresa"
             android:exported="false" />
@@ -37,11 +41,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
